--- a/10-final_lab/04-deploy-app/k8s-deploy/7-mysql-configmap.yml
+++ b/10-final_lab/04-deploy-app/k8s-deploy/7-mysql-configmap.yml
@@ -4,7 +4,7 @@ metadata:
   name: mysql-configmap
 data:
   USER: root
-  # PASSWORD: password_mysql
+  PASSWORD: root
   #DATABASE_URL: mysql://mysql:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC
   DATABASE_URL: mysql://10.0.80.182:3306/SpringWebYoutube?useTimezone=true&serverTimezone=UTC # caso esteja vinculando um clusterIP na mão
         
